--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "datatables.net-dt": "^1.10.20",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "^3.4.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
