--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
-    "datatables.net-dt": "^1.10.20",
-    "vue": "^2.6.10"
   },
   "devDependencies": {
+    "core-js": "^3.4.4",
+    "datatables.net-dt": "^1.10.20",
+    "vue": "^2.6.10",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
