Added dist to git

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-obiba-search-result",
+  "main": "dist/VueObibaSearchResult.umd.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
