--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.0.3",
-    "core-js": "^3.4.4",
-    "datatables.net-dt": "^1.10.20",
+    "core-js": "^3.6.5",
+    "datatables.net-dt": "^1.10.21",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "rql": "https://github.com/epigeny/rql.git#1.0.1",
-    "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "rql": "git+https://github.com/epigeny/rql.git#1.0.1",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "extends": [
