--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build-lib": "vue-cli-service build --target lib --name VueObibaSearchResult src/main.js",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chart.js": "^2.9.3"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
