Use chartjs-chart-geo (#25)
* Use chartjs-chart-geo

* updated dist

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
-    "jqvmap": "git+https://github.com/10bestdesign/jqvmap.git#v1.5.1"
+    "chartjs-chart-geo": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
