--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "rql": "git+https://github.com/epigeny/rql.git#1.1.0",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "marked": "^1.1.1"
   },
   "eslintConfig": {
     "extends": [
