--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vue-obiba-search-result",
-  "main": "dist/VueObibaSearchResult.umd.js",
-  "version": "1.4.0",
+  "name": "vue-mica-result",
+  "main": "dist/VueMicaSearch.umd.js",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-lib": "vue-cli-service build --target lib --name VueObibaSearchResult src/main.js",
+    "build-lib": "vue-cli-service build --target lib --name VueMicaSearch src/main.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
