--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-lib": "vue-cli-service build --target lib --name VueMicaSearch src/main.js",
+    "build": "vue-cli-service build --mode production --target lib --name VueMicaSearch src/main.js",
+    "build-lib": "vue-cli-service build --mode development --target lib --name VueMicaSearch src/main.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
