--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
-    "chartjs-chart-geo": "^2.1.0"
+    "chartjs-chart-geo": "^2.1.0",
+    "plotly.js-dist-min": "^2.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
@@ -22,10 +23,10 @@
     "datatables.net-dt": "^1.10.21",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "marked": "^1.1.1",
     "rql": "git+https://github.com/epigeny/rql.git#1.1.0",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12",
-    "marked": "^1.1.1"
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "extends": [
