--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-mica-result",
+  "name": "vue-mica-search",
   "main": "dist/VueMicaSearch.umd.js",
   "version": "1.1.0",
   "private": true,
